更新路由与swagger
